--- a/src/components/UiGroup/UiGroup.scss
+++ b/src/components/UiGroup/UiGroup.scss
@@ -1,6 +1,8 @@
 @import "../../styles/variables";
+@import "../../styles/mixins";
 
 .UiGroup {
+  @include default-font;
   max-width: 768px;
   margin-bottom: 1rem;
   line-height: 1.3;
