--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,4 +1,5 @@
 @import "../styles/variables";
+@import "../styles/mixins";
 
 html,
 body,
@@ -34,6 +35,7 @@ h2.post__title {
 }
 
 .post-metadata {
+  @include default-font;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
