--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,6 +1,6 @@
-@mixin default-font {
-  font-family: $fontFamilySans;
-  color: $white;
+@mixin default-font($family: $fontFamilySans, $color: $white) {
+  font-family: $family;
+  color: $color;
 }
 
 @mixin flex-row {
@@ -9,26 +9,34 @@
   align-items: center;
 }
 
-@mixin outset-border {
+@mixin flex-row($justify: flex-start) {
+  display: flex;
+  flex-direction: row;
+  justify-content: $justify;
+  align-items: center;
+}
+
+@mixin border-style {
   border-width: 2px;
   border-style: solid;
+}
+
+@mixin outset-border {
+  @include border-style;
   border-color: $greyLightest $grey $grey $greyLightest;
 }
 
 @mixin outset-border-inverted {
-  border-width: 2px;
-  border-style: solid;
+  @include border-style;
   border-color: $grey $greyLightest $greyLightest $grey;
 }
 
 @mixin outset-border-darker {
-  border-width: 2px;
-  border-style: solid;
+  @include border-style;
   border-color: $greyLighter $black $black $greyLighter;
 }
 
 @mixin outset-border-darker-inverted {
-  border-width: 2px;
-  border-style: solid;
+  @include border-style;
   border-color: $black $greyLighter $greyLighter $black;
 }
