--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -68,3 +68,18 @@ h2.post__title {
   margin-bottom: 1rem;
   max-width: 768px;
 }
+
+.float {
+  float: right;
+  padding: 2rem;
+  .caption {
+    padding-top: 5px;
+    font-size: 14px;
+    max-width: 300px;
+    font-style: italic;
+  }
+  @media (max-width: 576px) {
+    float: none;
+    padding: 0;
+  }
+}
