--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,17 +1,42 @@
-@mixin outset-border {
-  border-width: 2px;
-  border-style: solid;
-  border-color: $greyLightest $grey $grey $greyLightest;
+@mixin default-font($family: $fontFamilySans, $color: $white) {
+  font-family: $family;
+  color: $color;
 }
 
-@mixin outset-border-darker {
+@mixin flex-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+@mixin flex-row($justify: flex-start) {
+  display: flex;
+  flex-direction: row;
+  justify-content: $justify;
+  align-items: center;
+}
+
+@mixin border-style {
   border-width: 2px;
   border-style: solid;
+}
+
+@mixin outset-border {
+  @include border-style;
   border-color: $greyLightest $grey $grey $greyLightest;
 }
 
 @mixin outset-border-inverted {
-  border-width: 2px;
-  border-style: solid;
+  @include border-style;
   border-color: $grey $greyLightest $greyLightest $grey;
+}
+
+@mixin outset-border-darker {
+  @include border-style;
+  border-color: $greyLighter $black $black $greyLighter;
+}
+
+@mixin outset-border-darker-inverted {
+  @include border-style;
+  border-color: $black $greyLighter $greyLighter $black;
 }
