--- a/src/styles/_tables.scss
+++ b/src/styles/_tables.scss
@@ -14,6 +14,10 @@ tbody tr:first-child td {
   padding-top: 5px;
 }
 
+tbody tr:last-child td {
+  border-bottom: 2px solid $black;
+}
+
 thead th {
   @include outset-border-darker;
   line-height: 1;
