feature: complete first Activity Log iteration

--- a/src/components/UiDataTableFooter/UiDataTableFooter.scss
+++ b/src/components/UiDataTableFooter/UiDataTableFooter.scss
@@ -51,10 +51,18 @@
       }
     }
   }
-
+  &__error,
   &__count,
   &__pages,
   &__loading {
-    margin-top: 4px;
+    margin-top: 3px;
+  }
+
+  &__loading {
+    $color: $blue;
+  }
+
+  &__error {
+    color: $red;
   }
 }
