--- a/src/styles/_tables.scss
+++ b/src/styles/_tables.scss
@@ -8,6 +8,8 @@ table {
   border-spacing: 0;
   line-height: 1.2;
   overflow-y: auto;
+  //  border-collapse: separate;
+  // padding: 2rem;
 }
 
 tbody tr:first-child td {
@@ -16,6 +18,19 @@ tbody tr:first-child td {
 
 tbody tr:last-child td {
   border-bottom: 2px solid $black;
+}
+
+tbody tr td:first-child {
+  // border-left: 2px solid $greyLighter;
+  // border-right: 2px solid $greyLighter;
+}
+
+tbody tr td:nth-child(n) {
+  border-left: 2px solid $greyLighter;
+}
+
+tbody tr td:last-child {
+  border-right: 2px solid $black;
 }
 
 thead th {
