feature: use image for DataTable forward/back buttons

--- a/src/components/UiDataTableFooter/UiDataTableFooter.scss
+++ b/src/components/UiDataTableFooter/UiDataTableFooter.scss
@@ -45,10 +45,14 @@
 
     button.previous,
     button.next {
-      @include paginate-button;
-      &:active {
-        border-color: $black $greyLightest $greyLightest $black;
-      }
+      @include strip-button-styles;
+      height: 18px;
+      width: 18px;
+
+      // @include paginate-button;
+      // &:active {
+      //   border-color: $black $greyLightest $greyLightest $black;
+      // }
     }
   }
   &__error,
