chore: layout tweaks about

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -86,7 +86,8 @@ div.responsive-svg {
 
 .float {
   float: right;
-  padding: 2rem;
+  padding-left: 1rem;
+  //  padding: 2rem;
   .caption {
     padding-top: 5px;
     font-size: 14px;
