--- a/src/components/UiScorecard/UiScorecard.scss
+++ b/src/components/UiScorecard/UiScorecard.scss
@@ -7,6 +7,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 0.3rem 0.3rem 0.1rem;
+  //  padding: 0.3rem 0.3rem 0.1rem;
   margin-bottom: 0.25rem;
 }
