--- a/src/components/UiHeader/UiHeader.scss
+++ b/src/components/UiHeader/UiHeader.scss
@@ -18,8 +18,8 @@
     display: flex;
     align-items: center;
     font-weight: bold;
-    padding-top: 0;
     span {
+      display: block;
       padding-top: 4px;
     }
   }
