fix: trigger cache clear

--- a/src/components/UiDataTable/UiDataTable.scss
+++ b/src/components/UiDataTable/UiDataTable.scss
@@ -9,15 +9,15 @@
   .UiDataTable__table.fullwidth {
     display: grid;
     grid-auto-rows: min-content;
-    row-gap: 1px;
+    // row-gap: 1px;
     overflow-y: hidden;
 
-    height: 280px;
+    //height: 240px;
 
     .headings {
       display: grid;
       grid-template-columns: 120px 60px 95px 70px 1fr;
-      margin-bottom: 2px;
+      //      margin-bottom: 2px;
       .header {
         max-height: 18px;
         background-color: $greyDark;
@@ -36,14 +36,15 @@
       margin: 0;
       height: 18px;
       max-height: 18px;
-      border-top: 1px solid $greyLighter;
-      border-right: 1px solid $grey;
-      border-left: 1px solid $greyLightest;
-      border-bottom: 1px solid $grey;
+      background-color: $grey;
+      // border-top: 1px solid $greyLighter;
+      // border-right: 1px solid $grey;
+      // border-left: 1px solid $greyLightest;
+      // border-bottom: 1px solid $grey;
       &:nth-child(odd) {
-        background-color: $grey;
-        border-bottom: 1px solid $greyDark;
-        border-right: 1px solid $greyDark;
+        // background-color: $grey;
+        // border-bottom: 1px solid $greyDark;
+        // border-right: 1px solid $greyDark;
       }
 
       .cell-content {
