fix: UiSelect padding on Windows

--- a/src/components/UiSelect/UiSelect.scss
+++ b/src/components/UiSelect/UiSelect.scss
@@ -73,3 +73,10 @@
     }
   }
 }
+
+/* Windows Chrome and Edge-specific adjustments */
+.windows-chrome-edge .Header {
+  .UiSelect__single-value {
+    padding-top: 0 !important;
+  }
+}
