style: change mono font

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 $fontFamilySans: "Sys", sans-serif;
-$fontFamilyMono: "Liberation Mono";
-//$fontFamilyMono: "PP Mono Lig";
+$fontFamilyMono: "Departure Mono";
+$fontFamilyDecorative: "Departure Mono";
 
 $blue: #7daea3;
 $green: #a9b665;
