style: revert mono font

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 $fontFamilySans: "Sys", sans-serif;
-$fontFamilyMono: "Liberation Mono";
-//$fontFamilyMono: "PP Mono Lig";
+//$fontFamilyMono: "Liberation Mono";
+$fontFamilyMono: "PP Mono Lig";
 
 $blue: #7daea3;
 $green: #a9b665;
