style: improve about page layout

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -86,16 +86,28 @@ div.responsive-svg {
 
 .float {
   float: right;
-  padding-left: 1rem;
-  //  padding: 2rem;
+  //padding-left: 1rem;
+  padding: 2rem;
+  text-align: center;
   .caption {
     padding-top: 5px;
     font-size: 14px;
     max-width: 300px;
     font-style: italic;
+    a {
+      font-size: 14px;
+    }
   }
-  @media (max-width: 576px) {
+}
+
+@media (max-width: 576px) {
+  .float {
+    text-align: center;
     float: none;
     padding: 0;
+  }
+  .caption {
+    min-width: 100%;
+    width: 100%;
   }
 }
