--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -37,7 +37,7 @@ $borderLight: #fa9a5c;
   }
 
   h2 {
-    padding-top: 3px;
+    //    padding-top: 3px;
     color: #282828 !important;
     font-size: 20px;
     margin: 0;
@@ -48,9 +48,15 @@ $borderLight: #fa9a5c;
   }
 }
 
-/* Windows Chrome and Edge-specific adjustments */
-.windows-chrome-edge .Header {
-  h2 {
-    padding-top: 0;
-  }
+.Header .box-outline .header-contents .title-spacer {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
 }
+
+/* Windows Chrome and Edge-specific adjustments */
+// .windows-chrome-edge .Header {
+//   h2 {
+//     padding-top: 0;
+//   }
+// }
