--- a/src/components/UiHeader/UiHeader.scss
+++ b/src/components/UiHeader/UiHeader.scss
@@ -29,10 +29,15 @@
 }
 
 /* Windows Chrome and Edge-specific adjustments */
-.windows-chrome-edge .UiHeader {
-  height: 25px;
+// .windows-chrome-edge .UiHeader {
+//   height: 25px;
+//   &__title span {
+//     margin-top: 0;
+//   }
+// }
 
-  &__title span {
-    margin-top: 0;
+.windows-chrome-edge .UiHeader {
+  &__title {
+    gap: 2px;
   }
 }
