--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -53,10 +53,9 @@ $borderLight: #fa9a5c;
   flex-direction: column;
   gap: 2px;
 }
-
-/* Windows Chrome and Edge-specific adjustments */
-// .windows-chrome-edge .Header {
-//   h2 {
-//     padding-top: 0;
-//   }
-// }
+.windows-chrome-edge .Header {
+  .box-outline .header-contents .title-spacer {
+    gap: 0;
+    margin-bottom: 3px;
+  }
+}
