feature: complete pictograph

--- a/src/components/UiButton/UiButton.scss
+++ b/src/components/UiButton/UiButton.scss
@@ -5,11 +5,11 @@
   @include outset-border;
   font-family: $fontFamilySans !important;
   color: $white;
-  font-size: 1rem;
+  font-size: 14px;
   font-family: "Sys TT";
   max-width: 100px;
   text-align: center;
-  padding: 4px 6px 2px;
+  padding: 2px 4px 1px;
   background-color: $greyDark;
   box-shadow: none;
   cursor: pointer;
