--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -30,14 +30,14 @@ a,
 blockquote {
   font-family: $fontFamilySans;
   color: $white;
-  font-size: 1rem;
+  font-size: 16px;
 }
 
 p,
 ul,
 ol,
 blockquote {
-  line-height: 1.3;
+  line-height: 1.4;
 }
 
 blockquote {
