style: sync chart styles with log

--- a/src/components/PictographTooltip/PictographTooltip.scss
+++ b/src/components/PictographTooltip/PictographTooltip.scss
@@ -1,4 +1,6 @@
-.UiStaticTooltip {
+@import "../../styles/variables";
+.PictographTooltip {
+  //background-color: $grey;
   display: flex;
   justify-content: flex-end;
   min-height: 20px;
