--- a/src/styles/_tables.scss
+++ b/src/styles/_tables.scss
@@ -8,8 +8,9 @@ table {
   border-spacing: 0;
   line-height: 1.2;
   overflow-y: auto;
-  //  border-collapse: separate;
-  // padding: 2rem;
+  a {
+    font-size: 14px;
+  }
 }
 
 tbody tr:first-child td {
@@ -17,7 +18,7 @@ tbody tr:first-child td {
 }
 
 tbody tr:last-child td {
-  border-bottom: 2px solid $black;
+  // border-bottom: 2px solid $black;
 }
 
 tbody tr td:first-child {
@@ -26,11 +27,11 @@ tbody tr td:first-child {
 }
 
 tbody tr td:nth-child(n) {
-  border-left: 2px solid $greyLighter;
+  //  border-left: 2px solid $greyLighter;
 }
 
 tbody tr td:last-child {
-  border-right: 2px solid $black;
+  //  border-right: 2px solid $black;
 }
 
 thead th {
@@ -46,8 +47,9 @@ thead th {
 
 td {
   padding-left: 0.35rem;
-}
-
-td:nth-child(odd) {
   background-color: $grey;
 }
+
+// td:nth-child(odd) {
+//   background-color: $grey;
+// }
