style: use Gruvbox Material white

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,7 +12,9 @@ $orange: #e78a4e;
 $red: #ea6962;
 $purple: #d3869b;
 
-$white: #ebdbb2;
+// $white: #ebdbb2;
+
+$white: #ddc7a1;
 
 $greyLightest: #a89984; // formerly `buttonHighlight`
 $greyLighter: #928374;
