--- a/src/components/UiGroup/UiGroup.scss
+++ b/src/components/UiGroup/UiGroup.scss
@@ -4,7 +4,7 @@
 .UiGroup {
   @include default-font;
   max-width: 768px;
-  margin-bottom: 1rem;
+  //  margin-bottom: 1rem;
   line-height: 1.3;
 
   .content {
