--- a/src/components/UiGroup/UiGroup.scss
+++ b/src/components/UiGroup/UiGroup.scss
@@ -4,7 +4,7 @@
 .UiGroup {
   @include default-font;
   max-width: 768px;
-  //  margin-bottom: 1rem;
+  margin-bottom: 1rem;
   line-height: 1.3;
 
   .content {
@@ -13,6 +13,7 @@
     border-left: 2px solid $grey;
     border-right: 2px solid $grey;
     border-bottom: 2px solid $grey;
+
     .no-bottom-padding {
       padding-bottom: 0;
     }
@@ -27,12 +28,14 @@
   max-width: 768px;
   margin-bottom: 1rem;
   line-height: 1.3;
+
   .content {
     margin-top: 0.25rem;
     padding: 0.5rem 0.5rem;
     border-left: 2px solid $grey;
     border-right: 2px solid $grey;
     border-bottom: 2px solid $grey;
+
     .no-bottom-padding {
       padding-bottom: 0;
     }
